--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,13 @@
 
     {% block content %}
 
+        <div class="container">
+            <form >
+                <input type="text" name="movie_query" placeholder="search for movies" class="form_control">
+                <input type="submit"  value="Submit" class="btn btn-default">
+            </form>
+        </div>
+
         <!-- Popular movie -->
         <h3> Popular Movies</h3>
         <ul>
@@ -28,3 +35,7 @@
         </ul>
 
     {% endblock %}
+
+
+    
+
